[tool.poetry]
name = "diss-plots"
version = "0.1.0"
description = ""
authors = ["Ben Barlow <ben-j-barlow.1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.9.1.post1"
jupyter = "^1.0.0"
python-pptx = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
